src/components/page-layout/navbar/navbar.module.scss
@import '../../../scss/variables';
@import '../../../scss/mixins/mixins';
@import '../../../scss/mixins/typography';
@import '../../page-components/page-component';

.menu {
    @media (min-width: $screen-lg) {
        padding-top: $page-gutter-lg;
        padding-bottom: $page-gutter-lg;
    }

    background-color: white;
    border-bottom: 1px solid #D8D8D8;

    > header {
        @include flexRow;
        margin: $page-gutter-sm/2 -#{$page-gutter-sm/2};
        @media (min-width: $screen-md) {
            margin: $page-gutter-md/2 -#{$page-gutter-md/2};
        }
        @media (min-width: $screen-lg) {
            margin: 0 0 $gutter-medium;
        }

        a {
            margin: 0 $page-gutter-sm/2;
            @media (min-width: $screen-md) {
                margin: 0 $page-gutter-md/2;
            }
            @media (min-width: $screen-lg) {
                margin: 0;
            }
            @media (min-width: $screen-xxl) {
                margin-left: -3.6em;
            }

            @media (min-width: $screen-xxl) {
                margin-left: -12%;
            }

            text-indent: -1000vw;
            background-image: url("/images/headforwards.black.png");
            background-size: contain;
            flex: 1;
            background-repeat: no-repeat;
            background-position: 0 center;
        }
    }

    > section {
        display: none;

        > ul {

            margin: 0;

            > li > a {
                display: block;
                text-decoration: none;
                color: white;
                padding: $gutter-small 0;
            }

            > li > a {
                @include fontLarge;
                margin-bottom: 0;
                color: white;
                display: flex;
                flex-direction: row;
                align-items: center;
                justify-content: space-between;
            }

            > li {
                padding-left: $gutter-small;
                &.hasChildren > a {
                    display: flex;

                    button {
                        background: none;
                        border: none;
                        padding: $gutter-small;
                        margin: -$gutter-small 0;
                        color: white;
                        width: 40px;
                        display: flex;
                        justify-content: center;

                    }
                }

                border-top: 1px solid #383F51;
                text-decoration: none;

                &:last-child {
                    border-bottom: 1px solid #383F51;
                }

                > section {
                    display: none;

                    ul {
                        margin-bottom: $gutter-small;
                    }

                    a {
                        color: #d7d7d6;
                        display: block;
                        padding: 0.5em 0;
                    }
                }

                &.isOpen > section {
                    display: block;

                    h1 {
                        display: none;
                    }
                }
            }
        }

        dt, dd {
            display: block;
            color: white;
            padding: 0;
            margin: 0;
        }

        dt, h1 {
            text-transform: uppercase;
            @include orange-type;
            @include fontMedium;
            margin-bottom: 0;
            font-weight: normal;
        }

        dd {
            line-height: 2;
            @include fontLarge;
            margin-bottom: 0;
        }
    }

    &:global(.is-active) {
        background-color: $blue-background;
        display: flex;
        flex-direction: column;
        height: 100vh;
        overflow: hidden;
        border-bottom: none;

        > header {

            a {
                background-image: url("/images/headforwards.white.png");
            }
        }

        > section {
            flex-grow: 1;
            display: flex;
            flex-direction: column;
            overflow-y: auto;

            ul {
                flex-grow: 1;
            }
        }
    }

    @media screen and (min-width: $screen-lg) {


        @include flexRow;
        align-items: stretch;
        flex-wrap: nowrap;
        border-bottom: 1px solid #D8D8D8;

        &:global(.is-active) {
            background-color: unset;
            height: unset;
            overflow: visible;
            border-bottom: 1px solid #D8D8D8;
            flex-direction: row;

            > header {

                a {
                    background-image: url("/images/headforwards.black.png");
                }
            }

            > section {
                overflow: visible;
                padding-top: unset;
            }
        }

        > header {
            //padding: $gutter-small/2 $gutter-medium/2;
            width: 37.5%;
            flex-shrink: 0;
            margin-bottom: 0;
        }

        > section {
            display: block;
            @media (min-width: $screen-lg) {
                margin-right: -$column-gutter/2;
            }

            > ul {
                display: flex;
                flex-direction: row;
                justify-content: flex-end;
                flex-wrap: wrap;

                > li {
                    position: relative;
                    border: none;
                    padding: $gutter-small/2 $gutter-medium/2;

                    &:last-child {
                        border: none;
                    }

                    a {
                        color: black;

                        &:hover {
                            @include orange-type;
                        }
                    }

                    li a {
                            padding: 0;
                        }

                    &.hasChildren > a {
                        button {
                            display: none;
                        }
                    }

                    &.isOpen > section {
                        display: none;
                    }

                    > section {
                        display: none;
                        padding: 20px;
                        background-color: white;
                        box-shadow: 0 0 11px 0 rgba(0, 0, 0, 0.4);
                        color: black;
                        //width: 37.5vw;
                        max-width: $max_width*0.375;
                        z-index: 1;
                        white-space: nowrap;
                        position: absolute;
                        right: 0;

                        &:before {
                            top: -$gutter-small/2;
                            right: 2rem;
                            content: '';
                            position: absolute;
                            width: 0;
                            height: 0;
                            border: $gutter-small/2 solid;
                            border-color: transparent transparent white white;
                            transform: rotate(135deg);
                            box-shadow: -2px 2px 2px 0 rgba(0, 0, 0, 0.1);
                        }

                        > ul {
                            margin: 0;
                        }

                        > li {
                            display: block;
                        }

                        h1 {
                            @include fontMedium;
                            font-weight: lighter;
                            padding-bottom: $gutter-small;
                            border-bottom: 1px solid #D8D8D8;
                        }

                        a {
                            @include fontLarge;
                            line-height: 2;
                            margin: 0;
                            @include arrow-link;
                            color: black;
                            display: block;
                        }
                    }

                    &:hover {
                        > section {
                            display: block;
                        }
                    }
                }
            }
        }

        .contactDetails {
            display: none;
        }

        &:global(.with-bg) {
            background-color: transparent;
            color: white;
            border-bottom: none;

            > header {
                a {
                    background-image: url("/images/headforwards.white.png");
                }
            }

            > section {

                > ul > li > a {
                    color: white;
                }
            }

        }
    }
}

